<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragmentbg"
    tools:context="androidsupersquad.rocketfrenzy.Fragments.HelpFragment">

    <ScrollView
        android:id="@+id/ObjectiveSV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:paddingBottom="50dp"
        android:layout_marginTop="80dp">

        <RelativeLayout
            android:id="@+id/ObjectiveHelp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="100dp"
            android:visibility="visible"
            android:weightSum="1">

            <TextView
                android:id="@+id/Objective"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/ObjectivesMessage" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/Objective"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:text="Jimmy Chao\nEugene Mesina\nChristian Blydt-Hansen\nDaniel Lee" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="134dp"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/Objective"
                android:layout_weight="1.64"
                app:srcCompat="@drawable/asslogo" />

        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/GameHelp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="230dp"
            android:textColor="@color/white"
            android:text="@string/ShakeGame" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView10"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="76dp"
            android:textColor="@color/white"
            android:text="@string/LotteryGame" />


        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView7"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="23dp"
            android:textColor="@color/white"
            android:text="@string/AsteroidGame" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/MenuSV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:layout_marginTop="80dp">

        <RelativeLayout
            android:id="@+id/MenuHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:paddingBottom="100dp"
            android:visibility="visible">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignLeft="@+id/imageView7"
                android:layout_alignStart="@+id/imageView7"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/profile" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView7"
                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp"
                android:layout_toEndOf="@+id/imageView7"
                android:layout_toRightOf="@+id/imageView7"
                android:textColor="@color/white"
                android:text="@string/ShopButton" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignLeft="@+id/imageView8"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/imageView8"
                android:layout_marginTop="99dp"
                app:srcCompat="@drawable/shop" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignStart="@+id/textView2"
                android:layout_alignTop="@+id/imageView6"
                android:textColor="@color/white"
                android:text="@string/ProfileButton" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignLeft="@+id/imageView9"
                android:layout_alignStart="@+id/imageView9"
                android:layout_below="@+id/textView3"
                android:layout_marginTop="36dp"
                app:srcCompat="@drawable/inventory" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView3"
                android:layout_alignStart="@+id/textView3"
                android:layout_alignTop="@+id/imageView8"
                android:textColor="@color/white"
                android:text="@string/InventoryButton" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignEnd="@+id/imageView10"
                android:layout_alignRight="@+id/imageView10"
                android:layout_below="@+id/textView4"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent"
                app:srcCompat="@drawable/ic_my_location_24dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView4"
                android:layout_alignStart="@+id/textView4"
                android:layout_alignTop="@+id/imageView9"
                android:textColor="@color/white"
                android:text="@string/LocationButton" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/imageView9"
                android:layout_marginLeft="36dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="25dp"
                app:srcCompat="@drawable/tiny_rocket" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView5"
                android:layout_alignStart="@+id/textView5"
                android:layout_alignTop="@+id/imageView10"
                android:textColor="@color/white"
                android:text="@string/RocketButton" />

        </RelativeLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/Objectives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Menu_Buttons"
            android:layout_alignBottom="@+id/Menu_Buttons"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="Objectives"
            android:textSize="12sp" />

        <Button
            android:id="@+id/Games"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignBaseline="@+id/Menu_Buttons"
            android:layout_alignBottom="@+id/Menu_Buttons"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="Game Help"
            android:textSize="12sp" />

        <Button
            android:id="@+id/Menu_Buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:text="Menu Button"
            android:textSize="12sp" />

    </RelativeLayout>



</RelativeLayout>
